--- a/plantseg.yaml
+++ b/plantseg.yaml
@@ -1,5 +1,5 @@
 # Contains the path to the directory or file to process
-path: "../data/ovules_subsampled/plantseg_test/"
+path: "../DATA/Anther/plantseg_test/"
 
 preprocessing:
   # enable/disable preprocessing
@@ -28,19 +28,17 @@ cnn_prediction:
   # enable/disable UNet prediction
   state: True
   # Trained model name, more info on available models and custom models in the README
-  model_name: "confocal_unet_bce_dice_ds1x"
+  model_name: "generic_confocal_3D_unet"
   # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
   device: "cuda"
   # (int or tuple) mirror pad the input stack in each axis for best prediction performance
-  mirror_padding: [16, 32, 32]
   # how many subprocesses to use for data loading
   num_workers: 8
   # patch size given to the network (adapt to fit in your GPU mem)
-  patch: [32, 128, 128]
+  patch: [20, 128, 128]
   # stride between patches (make sure the the patches overlap in order to get smoother prediction maps)
-  stride: [20, 100, 100]
+  stride_ratio: 0.75
   # "best" refers to best performing on the val set (recommended), alternatively "last" refers to the last version before interruption
-  version: best
   # If "True" forces downloading networks from the online repos
   model_update: False
 
