--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 */.idea/
-results/
 */__pycache__/
+*.egg-info/
 .ipynb_checkpoints/
 .DS_Store
+archive/
+build/
+data/
+dist/
+figures/
+results/
